Add additional link to introduction

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="home-container">
         <div class="profile-container">
-            <img class="profile-picture" src="assets/profile.png"/>
+            <img class="profile-picture" src="assets/profile_small.png"/>
 
             <div class="about-me">
                 
@@ -27,6 +27,7 @@
                     <span>Aspiring physicist.</span>
                     <span>Space enthusiast.</span>
                     <span>Occasional maker of things.</span>
+                    <span>Studying at <a href="https://www.imperial.ac.uk/">Imperial College London</a>.</span>
                 </p>
 
                 <div class="social-links">
