Correct profile image path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="home-container">
         <div class="profile-container">
-            <img class="profile-picture" src="assets/profile_small.png"/>
+            <img class="profile-picture" src="assets/profile.png"/>
 
             <div class="about-me">
                 
