Update asset urls to HTTPS
Remove {{ site.url }} from asset URLs to prevent HTTPS certificate
errors.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <div class="page-links-home">
                     {% for page in site.sitepages %}
-                        <span><a href="{{ site.url }}/{{ page.url }}">{{ page.label }}</a></span>
+                        <span><a href="/{{ page.url }}">{{ page.label }}</a></span>
                     {% endfor %}
                 </div>
 
