--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <head>
     {% include head.html %}
     
-    <link rel="stylesheet" href="assets/css/home.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/home.css" type="text/css">
 </head>
 
 <body id="body">
@@ -17,7 +17,7 @@
             <h1>Oh no...</h1>
             <p>It appears you've found a page that doesn't exist! </p>
             <p>Well, I guess it exists now you're here... <i>Quick! Leave before this paradox gets out of hand!</i></p>
-            <div><a id="not-found-link" href="/">Return to the Homepage</a></div>
+            <div><a href="/">Return to the Homepage</a></div>
         </div>
     </div>
 
