Update homepage summary
Update content of homepage summary, and include styling for italic text
within span on homepage.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@ enable_maths: false
                 
                 <h1>Hi there, <span>I'm <b>Thomas Varnish</b></span></h1>
                 <p>
-                    <span>Aspiring physicist.</span>
-                    <span>Space enthusiast.</span>
+                    <span>MSci Physics student at <a href="https://www.imperial.ac.uk/">Imperial College London</a>.</span>
                     <span>Occasional maker of things.</span>
-                    <span>Studying at <a href="https://www.imperial.ac.uk/">Imperial College London</a>.</span>
+                    <span>Studying galaxy evolution with <i>Herschel</i>.</span>
                 </p>
 
                 <div class="social-links">
