I'm a PhD student now?!

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ enable_maths: false
                 
                 <h1>Hi there, <span>I'm <b>Thomas Varnish</b></span></h1>
                 <p>
-                    <span>MSci Physics student at <a href="https://www.imperial.ac.uk/">Imperial College London</a>.</span>
+                    <span>PhD student at the <a href="https://www.psfc.mit.edu/" title="Plasma Science and Fusion Center">PSFC</a> at <a href="https://mit.edu/" title="Massachusetts Institute of Technology">MIT</a>.</span>
                     <span>Occasional maker of things.</span>
-                    <span>Studying galaxy evolution with <i>Herschel</i>.</span>
+                    <span>Studying astrophysically-relevant plasma physics on <a href="https://puffin.mit.edu/" title="PUlser For Fundamental [Plasma Physics] INvestigations">PUFFIN</a>.</span>
                 </p>
 
                 <div class="social-links">
