Update profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ enable_maths: false
     
     <div class="home-container">
         <div class="profile-container">
-            <img class="profile-picture" src="assets/profile.png" alt="Profile picture"/>
+            <img class="profile-picture" src="assets/profile.jpg" alt="Profile picture"/>
 
             <div class="about-me">
                 
